SWA-001 Button customized

--- a/src/pages/modules/Inicio.module.css
+++ b/src/pages/modules/Inicio.module.css
@@ -17,7 +17,7 @@
     padding-left: 200px;
     padding-right: 200px;
     font-size: 3rem;
-    color: #2c9cd4;
+    color: rgb(36, 32, 32);
     font-weight: bold;
     font-family: 'Open Sans', 'sans-serif';
     text-align:end;
