--- a/src/pages/userlogs/modules/button.module.css
+++ b/src/pages/userlogs/modules/button.module.css
@@ -24,16 +24,19 @@
   align-self: center;
   border: none;
   cursor: pointer;
-  /*box-shadow: 0 12px 35px 0 rgba(53, 165, 180, 0.25);*/
+  box-shadow: 0 12px 35px 0 rgba(255, 227, 207, 0.25);
   outline: 0;
   text-transform: capitalize;
-  background-color: #fae0ce;
-  color: rgb(53, 53, 53);
+  background-color: #84c1e0;
+  /*color: rgb(53, 53, 53);*/
   font-weight: bold;
   transition: transform 0.3s ease;
+  color: #fff;
+  border-radius: 2rem;
+  border-color: black;
 }
 
 .btn:hover {
   /*transform: translateY(-3px);*/
-  background-color: #f0d2bc;
+  background-color: #a3d0e6;
 }
